--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 
-<img src="flood1.JPG" alt="Ejemplo">
+<img src="flood1.jpg" alt="Ejemplo">
 
 <div id="LineChart"></div>
 <body>
