--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <script>
   var lineChart = dex.charts.c3.LineChart({
     'parent': '#LineChart',
-    'csv': new dex.csv(['HISTORIAL INUNDACIONES', '2017', '2016', '2015', '2014', '2013','2012', '2011', '2010'],
+    'csv': new dex.csv(['HISTORIAL INUNDACIONES', 'NORTE', 'SUR', 'OCCIDENTE', 'OESTE', 'CENTRO'],
       dex.datagen.randomIndexedMatrix({
         'rows': 9,
         'columns': 9,
