--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <p1> En el mapa se observa las zonas más afectadas por inundaciones ...</p1>
-<img src="flood1.JPG" alt="Ejemplo">
+<img src="flood1.jpg" alt="Ejemplo">
 <div id="LineChart"></div>
 <body>
 <p2> Se evidencia un comportamiento irregular en las zonas a través de los años frente a las inundaciones.
